Update of German translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5870 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2011-07-28  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
+ * de.po: Update of German translation.
  * zh_TW.po: Update of Traditional Chinese translation. 
              Thanks to Wei-Lun Chao for providing update. 
 
