--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2011-07-28  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/build.c, src/build.h, src/editor.c, src/interface.c,
+   src/keyfile.c, src/prefs.c, src/stash.c, src/stash.h,
+   src/ui_utils.c, geany.glade, doc/geany.txt, doc/geany.html:
+   Allow to edit formerly hidden preferences in the prefs dialog
+   (closes #3313315, patch by Dimitar Zhekov, thanks!).
+
+
 2011-06-26  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/highlighting.c:
