Improve indentation width detection to better deal with Java and Vala files
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5873 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
    src/ui_utils.c, geany.glade, doc/geany.txt, doc/geany.html:
    Allow to edit formerly hidden preferences in the prefs dialog
    (closes #3313315, patch by Dimitar Zhekov, thanks!).
+ * src/document.c:
+   Improve indentation width detection to better deal with Java
+   and Vala files.
 
 
 2011-06-26  Colomban Wendling  <colomban(at)geany(dot)org>
