Add myself to various prefs credits as asked by Dimitar
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5876 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,7 @@
    src/keyfile.c, src/prefs.c, src/stash.c, src/stash.h,
    src/ui_utils.c, geany.glade, doc/geany.txt, doc/geany.html:
    Allow to edit formerly hidden preferences in the prefs dialog
-   (closes #3313315, patch by Dimitar Zhekov, thanks!).
+   (closes #3313315, patch by Dimitar Zhekov and myself, thanks!).
  * src/document.c:
    Improve indentation width detection to better deal with Java
    and Vala files.
