Adding some content about PLUGIN_SET_TRANSLATABLE_INFO() into plugin HowTo.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5877 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-07-31  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * doc/plugins.dox:
+   Adding some content about PLUGIN_SET_TRANSLATABLE_INFO() into plugin
+   HowTo.
+
+
+
 2011-07-28  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/build.c, src/build.h, src/editor.c, src/interface.c,
