Putting section about Translatable plugin information into subsection
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5878 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/doc/plugins.dox
+++ b/doc/plugins.dox
@@ -381,7 +381,8 @@ void plugin_cleanup(void)
  * Now you might like to look at Geany's source code for core plugins such as
  * @a plugins/demoplugin.c.
  *
- * @section furtherimprovements Furter Improvements and next steps - Translatable plugin information
+ * @section furtherimprovements Furter Improvements and next steps
+ * @subsection translatable_plugin_information Translatable plugin information
  *
  * After we have done our first plugin, there is still some place for improvements.
  *
