Adding a hint to main_locale_init() to plugin HowTo
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5879 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 
  * doc/plugins.dox:
    Adding some content about PLUGIN_SET_TRANSLATABLE_INFO() into plugin
-   HowTo.
+   HowTo as well as a hint to make usage of main_locale_init().
 
 
 
