--- a/doc/plugins.dox
+++ b/doc/plugins.dox
@@ -451,4 +451,7 @@ void plugin_init(GeanyData *data)
 		G_CALLBACK(item_activate_cb), NULL);
 }
  * @endcode
+ *
+ * If you already did use PLUGIN_SET_TRANSLATABLE_INFO() you don't need
+ * to add main_locale_init() as it has been already called.
  **/
