Adding a hint to prevent double usage of main_local_init() also to function documentation and correct word order.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5881 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/doc/plugins.dox
+++ b/doc/plugins.dox
@@ -453,5 +453,5 @@ void plugin_init(GeanyData *data)
  * @endcode
  *
  * If you already did use PLUGIN_SET_TRANSLATABLE_INFO() you don't need
- * to add main_locale_init() as it has been already called.
+ * to add main_locale_init() as it has already been called.
  **/
