Only include config.h when building Geany
config.h is not distributed, and we includ it from geany.h.  Even
though it was only included it HAVE_CONFIG_H was defined, an Autotools
based build system is likely to define it, and it becomes a problem if
that very build system uses another header name than config.h.

Closes #3384026

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5882 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,16 @@
+2011-08-03  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/geany.h, plugins/classbuilder.c, plugins/export.c,
+   plugins/filebrowser.c, plugins/htmlchars.c, plugins/saveactions.c,
+   plugins/splitwindow.c:
+   Only include config.h when building Geany (closes #3384026).
+
+
 2011-07-31  Frank Lanitz  <frlan@frank.uvena.de>
 
  * doc/plugins.dox:
    Adding some content about PLUGIN_SET_TRANSLATABLE_INFO() into plugin
    HowTo as well as a hint to make usage of main_locale_init().
-
 
 
 2011-07-28  Colomban Wendling  <colomban(at)geany(dot)org>
