Focus the editor upon double click on the message and compiler windows
Also improve the code a bit by using a boolean to know whether to focus
the editor rather than always pass the key value and check it against
enter-or-return in the callee side.

Patch by Dimitar Zhekov, thanks!

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5887 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-08-13  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/msgwindow.c, src/msgwindow.h, src/ui_utils.c, src/ui_utils.h:
+   Focus the editor upon double click on the message and compiler
+   windows (patch by Dimitar Zhekov, thanks).
+
+
 2011-08-03  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/geany.h, plugins/classbuilder.c, plugins/export.c,
