Update API version used inside plugin howto to a more recent version (API v211).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5888 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * doc/plugins.dox:
+   Update API version used inside plugin howto to a more recent version
+   (API v211).
+
+
 2011-08-13  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/msgwindow.c, src/msgwindow.h, src/ui_utils.c, src/ui_utils.h:
