Add Cython filetype
Patch by Matthew Brush, thanks.

Also remove the Cython keywords from Python filetype.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5889 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-08-19  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * data/filetype_extensions.conf, data/filetypes.Cython.conf,
+   data/filetypes.python:
+   Add Cython filetype (patch by Matthew Brush, thanks).
+
+
 2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * doc/plugins.dox:
