Fix generating global tags (geany -g) when the configdir doesn't exist
When creating temporary files for generating global tag files, use
the system directory for temporary files rather than the configuration
directory, so it works even if the configuration directory doesn't
already exist.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5890 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
  * data/filetype_extensions.conf, data/filetypes.Cython.conf,
    data/filetypes.python:
    Add Cython filetype (patch by Matthew Brush, thanks).
+ * src/symbols.c, tagmanager/include/tm_workspace.h,
+   tagmanager/tm_workspace.c:
+   Create temporary files used for generating global tags files in the
+   system directory for temp files.
 
 
 2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
