Update of wording to fix some grammatical issues etc. on plugin howto.
Patch provided by Matthew Brush. Thanks.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5891 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-08-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * doc/plugins.dox:
+   Update of wording to fix some grammatical issues etc. on plugin howto.
+   Patch provided by Matthew Brush. Thanks.
+
+
 2011-08-19  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * data/filetype_extensions.conf, data/filetypes.Cython.conf,
