Don't make tags for /dev/null in diff files but for the new file instead
Based on a patch by Yang Hong, thanks.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5893 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,9 @@
    tagmanager/tm_workspace.c:
    Create temporary files used for generating global tags files in the
    system directory for temp files.
+ * tagmanager/diff.c:
+   Don't make tags for /dev/null in diff files but for the new file
+   instead (Based on a patch by Yang Hong, thanks).
 
 
 2011-08-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
