--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-08-20  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * tagmanager/haskell.c:
+   Fix tags for one-letter Haskell symbols (closes #3289160).
+
+
 2011-08-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * doc/plugins.dox:
