Fix search for the current word if it isn't composed of only GEANY_WORDCHARS
Use Scintilla's definition of a "word" when fetching the current word
to perform a search.  This is needed when we perform a whole-word
search for Scintilla to find the matches.

Closes #3386129.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5895 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-08-21  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/callbacks.c, src/editor.c, src/editor.h, src/keybindings.c:
+   Fix search for the current word if it isn't composed of only
+   GEANY_WORDCHARS (closes #3386129).
+
+
 2011-08-20  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * tagmanager/haskell.c:
