--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-08-24  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/editor.c:
+   Make completion and word completion support non-ASCII characters
+   (closes #3313351).
+
+
 2011-08-21  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/callbacks.c, src/editor.c, src/editor.h, src/keybindings.c:
