Add support for filetype-specific indentation settings
Closes #3339420 and #3390435.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5902 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/filetypes.c, src/filetypes.h, doc/geany.txt,
+   doc/geany.html, data/filetypes.*:
+   Add support for filetype-specific indentation settings (closes
+   #3339420 and #3390435).
+
+
 2011-08-24  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/editor.c:
