--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>
 
+ * src/utils.h:
+   Fix foreach_ptr_array() not to crash on arrays with 0 elements.
+
+
+2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>
+
  * src/document.c, src/filetypes.c, src/filetypes.h, doc/geany.txt,
    doc/geany.html, data/filetypes.*:
    Add support for filetype-specific indentation settings (closes
