Fix check for enabling MIME type based icons
gtk_icon_theme_lookup_by_gicon() requires GTK >= 2.14, and since
GTK 2.14 requires the GIcon API, drop the GLib check.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5907 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-02  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/ui_utils.c:
+   Fix check for enabling MIME type based icons.
+
+
 2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/utils.h:
