Plug a few memory leaks
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5908 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/ui_utils.c:
    Fix check for enabling MIME type based icons.
+ * src/encodings.c, src/filetypes.c:
+   Plug a few memory leaks.
 
 
 2011-08-25  Colomban Wendling  <colomban(at)geany(dot)org>
