--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-09-13  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * data/filetype_extensions.conf:
+   Add Markdown extensions from Shared MIME-Info database (closes
+   #3405321).
+
+
 2011-09-12  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/symbols.c:
