Add missing MIME type to a few filetypes
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5912 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * data/filetype_extensions.conf:
    Add Markdown extensions from Shared MIME-Info database (closes
    #3405321).
+ * src/filetypes.c:
+   Add missing MIME type to a few filetypes.
 
 
 2011-09-12  Colomban Wendling  <colomban(at)geany(dot)org>
