Fix a few typos in the docs
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5913 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    #3405321).
  * src/filetypes.c:
    Add missing MIME type to a few filetypes.
+ * doc/geany.txt, doc/geany.html:
+   Fix a few typos.
 
 
 2011-09-12  Colomban Wendling  <colomban(at)geany(dot)org>
