--- a/TODO
+++ b/TODO
@@ -15,7 +15,8 @@ Note: features included in brackets have lower priority.
 	  programming languages (done for C-like filetypes using
 	  filetypes.common named styles)
 	o update included regex library (and other CTags improvements)
-	o filetype-independent run command & keybinding
+	o asynchronous build commands on Windows
+	o (filetype-independent run command & keybinding)
 	o (better custom filetype support)
 	o (custom template insertion - so user can add licenses, etc)
 	o (selectable menu of arguments to use for Make, from Make Custom)
