--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@ Note: features included in brackets have lower priority.
 	  filetypes.common named styles)
 	o update included regex library (and other CTags improvements)
 	o asynchronous build commands on Windows
-	o (filetype-independent run command & keybinding)
+	o (filetype-independent run command in build dialog & keybinding)
 	o (better custom filetype support)
 	o (custom template insertion - so user can add licenses, etc)
 	o (selectable menu of arguments to use for Make, from Make Custom)
