--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, geany.glade:
+   Change various prefs label to /warn/ the user to read the manual.
+
+
 2011-09-15  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/utils.c:
