Fix document sensitivity of a few menu items
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5925 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-16  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/ui_utils.c:
+   Fix document sensitivity of a few menu items.
+
+
 2011-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, geany.glade:
