Update of Italian translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5926 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * it.po: Update of Italian translation. Thanks to Giuliano Manzitti
+          for providing the update.
+
+
 2011-08-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Minor update of German translation.
