Adding Giuliano Manzitti to THANKS-file.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5927 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/THANKS
+++ b/THANKS
@@ -119,6 +119,7 @@ José Manuel Castroagudín Silva <chavescesures(at)mail(dot)com> - gl
 Gabor Kmetyko aka kilo <kg_kilo(at)freemail(dot)hu> - hu
 M.Baldinelli <m(dot)baldinelli(at)agora(dot)it> - it
 Dario Santomarco <dariello(at)yahoo(dot)it> - it
+Giuliano Manzitti <gmanzitti(at)yahoo.it>
 Tarot Osuji <tarot(at)sdf(dot)lonestar(dot)org> - ja
 Chikahiro Masami <cmasa(dot)z321(at)gmail(dot)com> - ja
 Park Jang-heon <dotkabi(at)gmail(dot)com> - ko
