--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * THANKS: Adding Giuliano Manzitti to THANKS-file.
+
+
 2011-09-16  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/ui_utils.c:
