Added Persian translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5928 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
 
+ * po/fa.po, THANKS, src/about.c:
+   Adding Persian translation. Thanks to Moein Owhadi Kareshk
  * THANKS: Adding Giuliano Manzitti to THANKS-file.
 
 
