--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,8 @@
 
  * it.po: Update of Italian translation. Thanks to Giuliano Manzitti
           for providing the update.
+ * fa.po: Adding Persian translation. Thanks to Moein Owhadi Kareshk for
+          providing it.
 
 
 2011-08-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
