--- a/THANKS
+++ b/THANKS
@@ -109,6 +109,7 @@ Damián Viano <debian(at)damianv(dot)com(dot)ar> - es
 Antonio Jiménez González <tonificante(at)hotmail(dot)com> - es
 Nacho Cabanes <ncabanes(at)gmail(dot)com> - es
 Lucas Vieites <lucasvieites(at)gmail(dot)com>
+Moein Owhadi Kareshk <moein.owhadi(at)gmail.com> - fa
 Harri Koskinen <harri(at)fastmonkey(dot)org> - fi
 Jari Rahkonen <jari(dot)rahkonen(at)pp1(dot)inet(dot)fi> - fi
 Jean-Philippe Moal <skateinmars(at)skateinmars(dot)net> - fr
