Update po files for string freeze of Geany 0.21
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5929 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,6 @@
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
 
+ * *.po: Update po-files for string freeze of Geany 0.21.
  * it.po: Update of Italian translation. Thanks to Giuliano Manzitti
           for providing the update.
  * fa.po: Adding Persian translation. Thanks to Moein Owhadi Kareshk for
