Update of Spanish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5932 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/THANKS
+++ b/THANKS
@@ -108,7 +108,7 @@ Jeff Bailes <thepizzaking(at)gmail(dot)com - en_GB
 Damián Viano <debian(at)damianv(dot)com(dot)ar> - es
 Antonio Jiménez González <tonificante(at)hotmail(dot)com> - es
 Nacho Cabanes <ncabanes(at)gmail(dot)com> - es
-Lucas Vieites <lucasvieites(at)gmail(dot)com>
+Lucas Vieites <lucasvieites(at)gmail(dot)com> - es
 Moein Owhadi Kareshk <moein.owhadi(at)gmail.com> - fa
 Harri Koskinen <harri(at)fastmonkey(dot)org> - fi
 Jari Rahkonen <jari(dot)rahkonen(at)pp1(dot)inet(dot)fi> - fi
