--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
+
+
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
 
  * *.po: Update po-files for string freeze of Geany 0.21.
