--- a/po/es.po
+++ b/po/es.po
@@ -6,18 +6,19 @@
 # Lucas Vieites <lucas.vieites@gmail.com>, 2010 - 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: Geany 0.20\n"
+"Project-Id-Version: Geany 0.21\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-17 09:51+0200\n"
-"PO-Revision-Date: 2011-06-15 10:11+0100\n"
-"Last-Translator: Lucas Vieites <lucas.vieites@gmail.com>\n"
-"Language-Team: Español <es@li.org>\n"
+"POT-Creation-Date: 2011-09-19 18:08+0200\n"
+"PO-Revision-Date: 2011-09-19 09:19+0100\n"
+"Last-Translator: Lucas Vieites <lucasvieites@gmail.com>\n"
+"Language-Team: Español <geany-i18n@uvena.de>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: KBabel 1.11.4\n"
+"X-Poedit-Language: Spanish\n"
 
 #: ../geany.desktop.in.h:1
 msgid "A fast and lightweight IDE using GTK2"
@@ -1391,9 +1392,8 @@ msgid "In_dent Type"
 msgstr "Tipo de _sangría"
 
 #: ../src/interface.c:994 ../src/interface.c:1028
-#, fuzzy
 msgid "_Detect from Content"
-msgstr "Detectar desde archivo"
+msgstr "_Detectar según contenido"
 
 #: ../src/interface.c:1003 ../src/interface.c:3948 ../src/interface.c:5666
 msgid "_Tabs"
@@ -2945,17 +2945,15 @@ msgstr "Impresión"
 
 #: ../src/interface.c:5097
 msgid "<i>Warning: read the manual before changing these preferences.</i>"
-msgstr ""
+msgstr "<i>Aviso: lea el manual antes de cambiar estas opciones.</i>"
 
 #: ../src/interface.c:5102
-#, fuzzy
 msgid "<b>Various preferences</b>"
-msgstr "<b>Espacios virtuales</b>"
+msgstr "<b>Preferencias varias</b>"
 
 #: ../src/interface.c:5107 ../src/prefs.c:1583
-#, fuzzy
 msgid "Various"
-msgstr "_Anterior"
+msgstr "Varias"
 
 #: ../src/interface.c:5589
 msgid "Project Properties"
@@ -4926,15 +4924,16 @@ msgid "Close All"
 msgstr "C_errar todo"
 
 #: ../src/utils.c:89
-#, fuzzy
 msgid "Select Browser"
-msgstr "Navegador de archivos"
+msgstr "Seleccione navegador"
 
 #: ../src/utils.c:90
 msgid ""
 "Failed to spawn the configured browser command. Please correct it or enter "
 "another one."
 msgstr ""
+"No se ha podido ejecutar navegador mediante el comando configurado. "
+"Corríjalo o escriba uno diferente."
 
 #: ../src/utils.c:368
 msgid "Win (CRLF)"
