--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2011-09-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
+ * pt.po: Update of Portuguese translation. Thanks to André Glória.
 
 
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
