--- a/po/pt.po
+++ b/po/pt.po
@@ -1,13 +1,15 @@
 # Portuguese translation for geany
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
+# Copyright (c) 2009 - 2011 Geany's development team
 # This file is distributed under the same license as the geany package.
 #
+# André Glória <gloria_dot_andre_at_gmail_dot_com> 2009 - 2011
 msgid ""
 msgstr ""
-"Project-Id-Version: Geany 0.19\n"
+"Project-Id-Version: Geany 0.21\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-09-17 09:51+0200\n"
-"PO-Revision-Date: 2011-01-02 12:05+0100\n"
+"POT-Creation-Date: 2011-09-19 18:13+0200\n"
+"PO-Revision-Date: 2011-09-19 00:56+0100\n"
 "Last-Translator: André Glória <gloria_dot_andre_at_gmail_dot_com>\n"
 "Language-Team: \n"
 "Language: pt\n"
@@ -222,33 +224,29 @@ msgid "Working directory"
 msgstr "Directoria de trabalho"
 
 #: ../src/build.c:1847
-#, fuzzy
 msgid "Reset"
-msgstr "Repor o Zoom"
+msgstr "Reinicializar"
 
 #: ../src/build.c:1892
 msgid "Click to set menu item label"
 msgstr "Clicar para definir legenda de item do menu "
 
 #: ../src/build.c:1976 ../src/build.c:1978
-#, fuzzy, c-format
+#, c-format
 msgid "%s commands"
 msgstr "Comandos %s"
 
 #: ../src/build.c:1978
-#, fuzzy
 msgid "No filetype"
-msgstr "Nenhum Tipo de  Ficheiro"
+msgstr "Nenhum tipo de ficheiro"
 
 #: ../src/build.c:1987 ../src/build.c:2022
-#, fuzzy
 msgid "Error regular expression:"
 msgstr "Erro Expressão Regular:"
 
 #: ../src/build.c:2015
-#, fuzzy
 msgid "Independent commands"
-msgstr "Comandos Independentes do Tipo de Ficheiro"
+msgstr "Comandos Independentes"
 
 #: ../src/build.c:2047
 msgid "Note: Item 2 opens a dialog and appends the response to the command."
@@ -256,7 +254,6 @@ msgstr ""
 "Nota: Item 2 abre uma janela de diálogo e acrescenta a resposta ao comando."
 
 #: ../src/build.c:2056
-#, fuzzy
 msgid "Execute commands"
 msgstr "Comandos para Execução"
 
@@ -709,9 +706,9 @@ msgid "Setting %s indentation mode for %s."
 msgstr "Definindo modo de indentação com %s para o ficheiro %s."
 
 #: ../src/document.c:1100
-#, fuzzy, c-format
+#, c-format
 msgid "Setting indentation width to %d for %s."
-msgstr "Definindo modo de indentação com %s para o ficheiro %s."
+msgstr "Definindo largura da indentação para %d no ficheiro %s."
 
 #: ../src/document.c:1137 ../src/document.c:1737
 msgid "Invalid filename"
@@ -1008,9 +1005,8 @@ msgid "None"
 msgstr "Nenhum(a)"
 
 #: ../src/filetypes.c:304
-#, fuzzy
 msgid "Shell script"
-msgstr "Script de Consola"
+msgstr "Script de consola"
 
 #: ../src/filetypes.c:312
 msgid "Makefile"
@@ -1045,9 +1041,8 @@ msgid "_Markup Languages"
 msgstr "Linguagens de _Marcação"
 
 #: ../src/filetypes.c:716
-#, fuzzy
 msgid "M_iscellaneous"
-msgstr "Vários"
+msgstr "D_iversos"
 
 #: ../src/filetypes.c:1431 ../src/win32.c:105
 msgid "All Source"
@@ -1394,9 +1389,8 @@ msgid "In_dent Type"
 msgstr "Tipo de In_dentação"
 
 #: ../src/interface.c:994 ../src/interface.c:1028
-#, fuzzy
 msgid "_Detect from Content"
-msgstr "Detectar a partir do ficheiro"
+msgstr "_Detectar a partir do Conteúdo"
 
 #: ../src/interface.c:1003 ../src/interface.c:3948 ../src/interface.c:5666
 msgid "_Tabs"
@@ -1771,7 +1765,7 @@ msgstr ""
 
 #: ../src/interface.c:3179 ../src/interface.c:3415 ../src/interface.c:4564
 msgid "<b>Miscellaneous</b>"
-msgstr "<b>Vários</b>"
+msgstr "<b>Diversos</b>"
 
 #: ../src/interface.c:3198
 msgid "Always wrap search and hide the Find dialog"
@@ -1841,7 +1835,7 @@ msgstr "<b>Projectos</b>"
 
 #: ../src/interface.c:3246
 msgid "Miscellaneous"
-msgstr "Vários"
+msgstr "Diversos"
 
 #. TODO Find a better way to map the current notebook page to the
 #. * corresponding chapter in the documentation, comparing translatable
@@ -2000,19 +1994,16 @@ msgid "<b>Tab positions</b>"
 msgstr "<b>Posição dos Separadores</b>"
 
 #: ../src/interface.c:3576
-#, fuzzy
 msgid "Notebook tabs"
-msgstr "Separador de Anotações"
+msgstr "Separadores de Anotações"
 
 #: ../src/interface.c:3607
-#, fuzzy
 msgid "Show t_oolbar"
 msgstr "M_ostrar a Barra de Ferramentas"
 
 #: ../src/interface.c:3611
-#, fuzzy
 msgid "_Append toolbar to the menu"
-msgstr "_Acrescentar a Barra de Ferramentas ao Menu"
+msgstr "_Acrescentar a Barra de Ferramentas ao menu"
 
 #: ../src/interface.c:3614
 msgid "Pack the toolbar to the main menu to save vertical space"
@@ -2025,54 +2016,44 @@ msgid "Customize Toolbar"
 msgstr "Personalizar a Barra de Ferramentas"
 
 #: ../src/interface.c:3656
-#, fuzzy
 msgid "System _default"
-msgstr "_Padrão do Sistema"
+msgstr "Pa_drão do Sistema"
 
 #: ../src/interface.c:3664
-#, fuzzy
 msgid "Images _and text"
-msgstr "Im_agens e Texto"
+msgstr "Im_agens e texto"
 
 #: ../src/interface.c:3672
-#, fuzzy
 msgid "_Images only"
 msgstr "Apenas _Imagens"
 
 #: ../src/interface.c:3680
-#, fuzzy
 msgid "_Text only"
 msgstr "Apenas _Texto"
 
 #: ../src/interface.c:3688
-#, fuzzy
 msgid "<b>Icon style</b>"
 msgstr "<b>Estilo dos Ícones</b>"
 
 #: ../src/interface.c:3709
-#, fuzzy
 msgid "S_ystem default"
 msgstr "Por Defe_ito do Sistema"
 
 #: ../src/interface.c:3717
-#, fuzzy
 msgid "_Small icons"
-msgstr "Ícones _Pequenos"
+msgstr "Ícone_s pequenos"
 
 #: ../src/interface.c:3725
-#, fuzzy
 msgid "_Very small icons"
-msgstr "Ícones _Muito Pequenos"
+msgstr "Ícones _muito pequenos"
 
 #: ../src/interface.c:3733
-#, fuzzy
 msgid "_Large icons"
-msgstr "Ícones _Grandes"
+msgstr "Ícones _grandes"
 
 #: ../src/interface.c:3741
-#, fuzzy
 msgid "<b>Icon size</b>"
-msgstr "<b>Tamanho dos Ícones:</b>"
+msgstr "<b>Tamanho dos ícones</b>"
 
 #: ../src/interface.c:3746
 msgid "<b>Toolbar</b>"
@@ -2224,9 +2205,8 @@ msgid "Match braces"
 msgstr "Corresponder chavetas"
 
 #: ../src/interface.c:3923 ../src/interface.c:5641
-#, fuzzy
 msgid "Detect type from file"
-msgstr "Detectar a partir do ficheiro"
+msgstr "Detectar tipo a partir do ficheiro"
 
 #: ../src/interface.c:3928 ../src/interface.c:5646
 msgid ""
@@ -2237,9 +2217,8 @@ msgstr ""
 "ficheiro, quando este é aberto"
 
 #: ../src/interface.c:3930 ../src/interface.c:5648
-#, fuzzy
 msgid "T_abs and spaces"
-msgstr "T_abulações e Espaços"
+msgstr "T_abulações e espaços"
 
 #: ../src/interface.c:3935 ../src/interface.c:5653
 msgid ""
@@ -2257,12 +2236,10 @@ msgid "Use one tab per indent"
 msgstr "Usar uma tabulação por indentação"
 
 #: ../src/interface.c:3957 ../src/interface.c:5682
-#, fuzzy
 msgid "Detect width from file"
-msgstr "Detectar a partir do ficheiro"
+msgstr "Detectar largura a partir do ficheiro"
 
 #: ../src/interface.c:3962 ../src/interface.c:5687
-#, fuzzy
 msgid ""
 "Whether to detect the indentation width from file contents when a file is "
 "opened"
@@ -2377,7 +2354,7 @@ msgstr ""
 
 #: ../src/interface.c:4086
 msgid "Symbol list update frequency:"
-msgstr ""
+msgstr "Frequência de actualização da lista de símbolos:"
 
 #: ../src/interface.c:4099
 msgid ""
@@ -2385,6 +2362,10 @@ msgid ""
 "list. Note that a too short delay may have performance impact, especially "
 "with large files. A delay of 0 disables real-time updates."
 msgstr ""
+"Atraso mínimo (em mili-segundos) entre 2 actualizações automáticas da lista "
+"de símbolos. Note que um atraso muito curto poderá causar um impacto no "
+"desempenho, especialmente com ficheiros muito grandes. Um atraso de 0 (zero) "
+"desactiva as actualizações em tempo-real."
 
 #: ../src/interface.c:4102
 msgid "<b>Completions</b>"
@@ -2825,9 +2806,8 @@ msgid "Date:"
 msgstr "Data:"
 
 #: ../src/interface.c:4840
-#, fuzzy
 msgid "Date & time:"
-msgstr "Data & Hora:"
+msgstr "Data & hora:"
 
 #: ../src/interface.c:4852
 msgid ""
@@ -2956,17 +2936,15 @@ msgstr "Imprimir"
 
 #: ../src/interface.c:5097
 msgid "<i>Warning: read the manual before changing these preferences.</i>"
-msgstr ""
+msgstr "<i>Aviso: ler o manual antes de alterar estas preferências.</i>"
 
 #: ../src/interface.c:5102
-#, fuzzy
 msgid "<b>Various preferences</b>"
-msgstr "<b>Espaçamentos Virtuais</b>"
+msgstr "<b>Preferências diversas</b>"
 
 #: ../src/interface.c:5107 ../src/prefs.c:1583
-#, fuzzy
 msgid "Various"
-msgstr "_Anterior"
+msgstr "Diversos"
 
 #: ../src/interface.c:5589
 msgid "Project Properties"
@@ -3441,9 +3419,8 @@ msgid "Remove Error Indicators"
 msgstr "Remover Indicadores de Erro"
 
 #: ../src/keybindings.c:535
-#, fuzzy
 msgid "Remove Markers and Error Indicators"
-msgstr "Remover Indicadores de Erro"
+msgstr "Remover Marcadores e Indicadores de Erro"
 
 #: ../src/keybindings.c:537 ../src/keybindings.c:542 ../src/project.c:484
 #: ../src/ui_utils.c:1947
@@ -3704,7 +3681,7 @@ msgstr "Gestor de _Plugins"
 #: ../src/plugins.c:1160
 #, c-format
 msgid "%s %s"
-msgstr ""
+msgstr "%s %s"
 
 #: ../src/plugins.c:1236
 msgid "Active"
@@ -3731,9 +3708,8 @@ msgid "<b>Plugin details:</b>"
 msgstr "<b>Detalhes do Plugin:</b>"
 
 #: ../src/plugins.c:1403
-#, fuzzy
 msgid "Plugin:"
-msgstr "Plugin"
+msgstr "Plugin:"
 
 #: ../src/plugins.c:1404 ../src/project.c:446
 msgid "Description:"
@@ -3741,7 +3717,7 @@ msgstr "Descrição:"
 
 #: ../src/plugins.c:1405
 msgid "Author(s):"
-msgstr ""
+msgstr "Autor(s):"
 
 #: ../src/pluginutils.c:334
 msgid "Configure Plugins"
@@ -3939,9 +3915,8 @@ msgid "Choose Project Base Path"
 msgstr "Escolha o directório base para o projecto"
 
 #: ../src/project.c:196 ../src/project.c:575
-#, fuzzy
 msgid "Project file could not be written"
-msgstr "O ficheiro de projecto não pôde ser escrito (%s)."
+msgstr "O ficheiro de projecto não pôde ser escrito"
 
 #: ../src/project.c:199
 #, c-format
@@ -3975,6 +3950,8 @@ msgid ""
 "Space separated list of file patterns used for the find in files dialog (e."
 "g. *.c *.h)"
 msgstr ""
+"Lista, separada por espaços, de padrões de ficheiros a serem usados no "
+"diálogo \"Procura em Ficheiros\" (ex, *.c *.h)"
 
 #: ../src/project.c:578
 #, c-format
@@ -4138,17 +4115,15 @@ msgstr "Substitui todas as ocorrências no texto que se encontra seleccionado"
 
 #: ../src/search.c:831
 msgid "all"
-msgstr ""
+msgstr "todos"
 
 #: ../src/search.c:833
-#, fuzzy
 msgid "project"
-msgstr "projectos"
+msgstr "projecto"
 
 #: ../src/search.c:835
-#, fuzzy
 msgid "custom"
-msgstr "Personalizar"
+msgstr "personalizar"
 
 #: ../src/search.c:839
 msgid ""
@@ -4156,6 +4131,9 @@ msgid ""
 "Project: use file patterns defined in the project settings\n"
 "Custom: specify file patterns manually"
 msgstr ""
+"Todos: procura todos os ficheiros de um directório\n"
+"Projecto: usa padrões de ficheiros definidos nas opções do projecto\n"
+"Personalizado: especificar os padrões de ficheiros manualmente"
 
 #: ../src/search.c:906
 msgid "Fi_les:"
@@ -4324,7 +4302,7 @@ msgstr "Funções"
 
 #: ../src/symbols.c:708
 msgid "Program"
-msgstr ""
+msgstr "Programa"
 
 #: ../src/symbols.c:710 ../src/symbols.c:718 ../src/symbols.c:724
 msgid "Sections"
@@ -4332,16 +4310,15 @@ msgstr "Secções"
 
 #: ../src/symbols.c:711
 msgid "Paragraph"
-msgstr ""
+msgstr "Parágrafo"
 
 #: ../src/symbols.c:712
-#, fuzzy
 msgid "Group"
-msgstr "Grupo:"
+msgstr "Grupo"
 
 #: ../src/symbols.c:713
 msgid "Data"
-msgstr ""
+msgstr "Data"
 
 #: ../src/symbols.c:719
 msgid "Keys"
@@ -4497,21 +4474,19 @@ msgstr "Alvos"
 
 #: ../src/symbols.c:954
 msgid "Indexes"
-msgstr ""
+msgstr "Índices"
 
 #: ../src/symbols.c:955
-#, fuzzy
 msgid "Tables"
-msgstr "Variáveis"
+msgstr "Tabelas"
 
 #: ../src/symbols.c:956
 msgid "Triggers"
-msgstr ""
+msgstr "Acionadores"
 
 #: ../src/symbols.c:957
-#, fuzzy
 msgid "Views"
-msgstr "Ver"
+msgstr "Vistas"
 
 #: ../src/symbols.c:976
 msgid "Structs"
@@ -4593,7 +4568,7 @@ msgstr "Ordenar por Ocorrênci_a"
 #: ../src/templates.c:77
 #, c-format
 msgid "Failed to convert template file \"%s\" to UTF-8"
-msgstr ""
+msgstr "Erro ao converter o modelo de ficheiro \"%s\" para UTF-8"
 
 #. custom actions defined in toolbar_init(): "New", "Open", "SearchEntry", "GotoEntry", "Build"
 #: ../src/toolbar.c:56
@@ -4743,14 +4718,13 @@ msgid "Displayed Items"
 msgstr "Itens Apresentados"
 
 #: ../src/tools.c:110 ../src/tools.c:115
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid command: %s"
-msgstr "Executar o comando:"
+msgstr "Comando inválido: %s"
 
 #: ../src/tools.c:110
-#, fuzzy
 msgid "Command not found"
-msgstr "\"%s\" não foi encontrado."
+msgstr "Comando não encontrado"
 
 #: ../src/tools.c:256
 #, c-format
@@ -4790,7 +4764,7 @@ msgstr ""
 
 #: ../src/tools.c:522
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: ../src/tools.c:708
 msgid "No custom commands defined."
@@ -4939,15 +4913,16 @@ msgid "Close All"
 msgstr "Fechar Tudo"
 
 #: ../src/utils.c:89
-#, fuzzy
 msgid "Select Browser"
-msgstr "Navegador de Ficheiros"
+msgstr "Seleccionar navegador web"
 
 #: ../src/utils.c:90
 msgid ""
 "Failed to spawn the configured browser command. Please correct it or enter "
 "another one."
 msgstr ""
+"Erro ao executar o comando do navegador web configurado. Por favor corrija-o "
+"ou introduza um novo."
 
 #: ../src/utils.c:368
 msgid "Win (CRLF)"
@@ -5138,19 +5113,16 @@ msgid "Create Class"
 msgstr "Criar Classe"
 
 #: ../plugins/classbuilder.c:453
-#, fuzzy
 msgid "Create C++ Class"
-msgstr "Criar Classe"
+msgstr "Criar Classe C++"
 
 #: ../plugins/classbuilder.c:456
-#, fuzzy
 msgid "Create GTK+ Class"
-msgstr "Criar Classe"
+msgstr "Criar Classe GTK+"
 
 #: ../plugins/classbuilder.c:459
-#, fuzzy
 msgid "Create PHP Class"
-msgstr "Criar Classe"
+msgstr "Criar Classe PHP"
 
 #: ../plugins/classbuilder.c:476
 msgid "Namespace"
@@ -5217,9 +5189,8 @@ msgid "Is singleton"
 msgstr "É Singleton"
 
 #: ../plugins/classbuilder.c:587
-#, fuzzy
 msgid "Constructor type:"
-msgstr "Construtor do tipo GTK+"
+msgstr "Tipo de construtor:"
 
 #: ../plugins/classbuilder.c:1096
 msgid "Create Cla_ss"
@@ -5281,7 +5252,7 @@ msgstr "Caracteres de Pontuação"
 
 #: ../plugins/htmlchars.c:317
 msgid "Miscellaneous characters"
-msgstr "Vários Caracteres"
+msgstr "Caracteres diversos"
 
 #: ../plugins/htmlchars.c:372 ../plugins/filebrowser.c:1167
 #: ../plugins/saveactions.c:477
@@ -5354,13 +5325,12 @@ msgid "Export File"
 msgstr "Exportar Ficheiro"
 
 #: ../plugins/export.c:191
-#, fuzzy
 msgid "_Insert line numbers"
-msgstr "Imprimir os números das linhas"
+msgstr "Inserir números de linha"
 
 #: ../plugins/export.c:193
 msgid "Insert line numbers before each line in the exported document"
-msgstr ""
+msgstr "Inserir números de linha, antes de cada linha, no documento exportado"
 
 #: ../plugins/export.c:203
 msgid "_Use current zoom level"
@@ -5454,11 +5424,12 @@ msgid "Filter:"
 msgstr "Filtro:"
 
 #: ../plugins/filebrowser.c:922
-#, fuzzy
 msgid ""
 "Filter your files with the usual wildcards. Separate multiple patterns with "
 "a space."
-msgstr "Filtre os seus ficheiros com caracteres universais (wildcards) usuais"
+msgstr ""
+"Filtre os seus ficheiros com caracteres universais  usuais. Separe múltiplos "
+"padrões com um espaço."
 
 #: ../plugins/filebrowser.c:1137
 msgid "Focus File List"
@@ -5493,9 +5464,8 @@ msgid "Show hidden files"
 msgstr "Mostrar ficheiros ocultos"
 
 #: ../plugins/filebrowser.c:1256
-#, fuzzy
 msgid "Hide file extensions:"
-msgstr "Detectar através da extensão do ficheiro"
+msgstr "Ocultar extensões de ficheiros:"
 
 #: ../plugins/filebrowser.c:1281
 msgid "Use the project's base directory"
@@ -5628,13 +5598,12 @@ msgid "_Split Window"
 msgstr "Dividir Janela_s"
 
 #: ../plugins/splitwindow.c:416
-#, fuzzy
 msgid "_Side by Side"
-msgstr "_Ocultar a Barra Lateral"
+msgstr "_Lado a Lado"
 
 #: ../plugins/splitwindow.c:421
 msgid "_Top and Bottom"
-msgstr ""
+msgstr "_Topo e Base"
 
 #: ../plugins/splitwindow.c:437
 msgid "Split Horizontally"
