Update of Brasilian Portuguese translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5934 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,8 @@
 
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
  * pt.po: Update of Portuguese translation. Thanks to André Glória.
+ * pt_BR.po: Update of Brasilian Portuguese translation. Thanks to
+             Adrovane Marques Kade
 
 
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
