--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/keyfile.c:
+   Rename use_safe_file_saving various pref to use_atomic_file_saving 
+   as it's not 'safe'. Use old pref if new one is missing for 
+   compatibility with Geany <= 0.20.
+
+
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
 
  * po/fa.po, THANKS, src/about.c:
