Use GTK unsaved file dialog on Windows too because the button names should be specific.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/unstable@5941 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/build.c:
    Use #ifdef SYNC_SPAWN instead of G_OS_WIN32 for easier testing with 
    glib's asynchronous spawning (currently doesn't work on Windows).
+ * src/win32.c, src/win32.h, src/dialogs.c:
+   Use GTK unsaved file dialog on Windows too because the button names 
+   should be specific.
 
 
 2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
