--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    Rename use_safe_file_saving various pref to use_atomic_file_saving 
    as it's not 'safe'. Use old pref if new one is missing for 
    compatibility with Geany <= 0.20.
+ * src/prefs.c, src/stash.h, src/stash.c:
+   Fix making various prefs tree sync with data values when showing 
+   the prefs dialog (patch by Dimitar Zhekov, thanks).
 
 
 2011-09-17  Frank Lanitz  <frlan@frank.uvena.de>
