Fix \0 char in format string - save as dialog filter bug.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5946 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/stash.c, src/keyfile.c, src/keyfile.h, src/ui_utils.c:
    Add configuration_add_various_pref_group().
+ * src/win32.c:
+   Fix \0 char in format string - save as dialog filter bug.
 
 
 2011-09-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
