--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-09-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * gl.po: Update of Galician translation. Thanks to José Manuel
+          Castroagudín Silva.
+
+
 2011-09-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * en_GB.po: Update of British English translation. Thanks to Jeff Bailes.
