Update of simplified Chinese translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5951 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,7 +2,8 @@
 
  * gl.po: Update of Galician translation. Thanks to José Manuel
           Castroagudín Silva.
-
+ * zh_CN.po: Update of simplified Chinese translation. Thanks to
+             Xhacker Liu.
 
 2011-09-19  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
