Update of Turkish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5952 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,7 @@
 
  * gl.po: Update of Galician translation. Thanks to José Manuel
           Castroagudín Silva.
+ * tr.po: Update of Turkish translation. Thanks to Gürkan Gür.
  * zh_CN.po: Update of simplified Chinese translation. Thanks to
              Xhacker Liu.
 
