mismatch of format corrected
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5955 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/nl.po
+++ b/po/nl.po
@@ -783,11 +783,8 @@ msgstr "Fout bij het opslaan van het bestand (%s)."
 
 #: ../src/document.c:1807
 #, c-format
-msgid ""
-"%s\n"
-"\n"
-"The file on disk may now be truncated!"
-msgstr "Het bestand is wellicht (verkeerd) afgebroken!"
+msgid "%s\n\nThe file on disk may now be truncated!"
+msgstr "%s\n\nHet bestand is wellicht (verkeerd) afgebroken!"
 
 #: ../src/document.c:1809
 msgid "Error saving file."
