--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-09-23  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>
+
+ * nl.po: Repaired mismatch in translation format.
+
+
 2011-09-23  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * gl.po: Update of Galician translation. Thanks to José Manuel
